--- a/man/imclient.3
+++ b/man/imclient.3
@@ -39,7 +39,7 @@
 .\" AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
 .\" OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .SH NAME
-imclient library - authenticating callback interface to IMAP/IMSP servers
+imclient \- (library) authenticating callback interface to IMAP/IMSP servers
 .SH SYNOPSIS
 .ad l
 .ft B
