imtest.c: add support for NNTP compression and move use of COMPRESS command to after authentication

--- a/man/imtest.1
+++ b/man/imtest.1
@@ -185,7 +185,7 @@ attempt to do SSL/TLS session reuse and/or fast reauth
 Enable IMAP over SSL (imaps).
 .TP
 .B -q
-Enable IMAP COMPRESSion (before the last authentication attempt).
+Enable IMAP COMPRESSion (after authentication).
 .TP
 .B -c
 Enable challenge prompt callbacks.  This will cause the OTP mechanism
