--- a/man/mupdatetest.1
+++ b/man/mupdatetest.1
@@ -153,7 +153,7 @@ Number of authentication attempts; default = 1.  The client will
 attempt to fast reauth (e.g. DIGEST-MD5), if possible.
 .TP
 .B -q
-Enable MUPDATE COMPRESSion (before the last authentication attempt).
+Enable MUPDATE COMPRESSion (after authentication).
 .TP
 .B -c
 Enable challenge prompt callbacks.  This will cause the OTP mechanism
