--- a/doc/source/imap/release-notes/3.0/x/3.0.0-beta1.rst
+++ b/doc/source/imap/release-notes/3.0/x/3.0.0-beta1.rst
@@ -46,7 +46,7 @@ Major changes
     ``--with-cyrus-prefix`` and ``--with-service-path`` in favour of the more conventional
     ``--prefix``, ``--bindir``, ``--sbindir``, and ``--libexecdir``.
 
-*   Binaries executed by the :ref:`cyrus-master(8) <imap-admin-commands-cyrus-master>`
+*   Binaries executed by the :ref:`master(8) <imap-admin-commands-master>`
     service process are now installed to ``--libexecdir``.  Other binaries are installed to
     ``--bindir`` and/or ``--sbindir``.
 
