cyr_dbtool.8: document -M option

--- a/man/cyr_dbtool.8
+++ b/man/cyr_dbtool.8
@@ -48,6 +48,9 @@ cyr_dbtool \- manage Cyrus databases
 .I config-file
 ]
 [
+.B \-M
+]
+[
 .B \-n
 ]
 [
@@ -101,6 +104,9 @@ and must be supplied on the command line.
 .TP
 .BI \-C " config-file"
 Read configuration options from \fIconfig-file\fR.
+.TP
+.BI \-M
+Uses improved MBOX list sort.
 .TP
 .BI \-n
 Create the database file if it doesn't already exist.
