[Docs] Source repository has been moved out of Phabricator and onto GitHub.
* Development processes have changed (no longer using Arcanist for patch management)
* Repository URLs have changed.
* Bug reporting has changed (Bugzilla and Maniphest will be migrated into a single location: GitHub issues)

--- a/docsrc/imap/release-notes/3.0/x/3.0.0-beta3.rst
+++ b/docsrc/imap/release-notes/3.0/x/3.0.0-beta3.rst
@@ -25,6 +25,9 @@ Download via FTP:
 Major changes since the 2.5.x series
 ====================================
 
+*   The source repository has moved to :ref:`GitHub <github-guide>`, Bugzilla and Phabricator
+    have been deprecated and their issue lists imported into GitHub.
+
 *   Support added for FastMail-style conversations (threaded messages).
     (See the ``conversations`` options in :ref:`imapd.conf <imap-admin-configs-imapd.conf>`)
 
